--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 
             </div>
             <!-- Content -->
-            <div class="col-lg-6 p-0 app_Content ps-5 pb-3 ">
+            <div class="col-lg-6 p-0 app_Content px-5 pb-3 ">
                 <!-- Navbar -->
                 <div class="content_navbar ">
                     <div class="navbar_input ps-4 pt-0">
@@ -141,27 +141,73 @@
                     <div class="content_tasklist_schedule">
                         <ul class="tasklist_schedule-block h-100 d-flex flex-column p-0 m-0">
                             <li class="tasklist_schedule-item">
-                                <div class="tasklist_schedule-item-time"></div>
-                                <div class="tasklist_schedule-item-description"></div>
+                                <div class="tasklist_schedule-item-time">10 am</div>
+                                <div class="tasklist_schedule-item-description">Website design for client</div>
                             </li>
                             <li class="tasklist_schedule-item">
-                                <div class="tasklist_schedule-item-time"></div>
-                                <div class="tasklist_schedule-item-description"></div>
+                                <div class="tasklist_schedule-item-time">1 pm</div>
+                                <div class="tasklist_schedule-item-description">Interaction design for Viemo</div>
                             </li>
                             <li class="tasklist_schedule-item">
-                                <div class="tasklist_schedule-item-time"></div>
-                                <div class="tasklist_schedule-item-description"></div>
+                                <div class="tasklist_schedule-item-time">4 pm</div>
+                                <div class="tasklist_schedule-item-description">Buy Groceries</div>
                             </li>
                             <li class="tasklist_schedule-item">
-                                <div class="tasklist_schedule-item-time"></div>
-                                <div class="tasklist_schedule-item-description"></div>
+                                <div class="tasklist_schedule-item-time">9 pm</div>
+                                <div class="tasklist_schedule-item-description">Meeting with the team</div>
                             </li>
                         </ul>
                     </div>
                 </div>
             </div>
-            <!-- Calendar -->
-            <div class="col-lg-4 p-0 app_calendar">
+            <!-- Performance -->
+            <div class="col-lg-4 p-0 app_performance d-flex flex-column pe-5 pb-3">
+                <div class="app_performance_profile d-flex flex-column ">
+                    <img src="./img/avatar.jpg" alt="" class="app_performance_profile_avatar mx-auto ">
+                    <p class="app_performance_profile_status m-0 text-center">Hi Ngọc Minh</p>
+                </div>
+                <div class="app_performance_calendar">
+                    <div class="app_performance_calendar_navtime d-flex ">
+                        <div class="calendar_navtime_">arrow left</div>
+                        <div class="calendar_navtime_">Current time</div>
+                        <div class="calendar_navtime_">arrow right</div>
+                    </div>
+                    <ul class="calendar_daylist p-0 m-0 px-5">
+                        <li class="calendar_dayslist-day">1</li>
+                        <li class="calendar_dayslist-day">2</li>
+                        <li class="calendar_dayslist-day">3</li>
+                        <li class="calendar_dayslist-day">4</li>
+                        <li class="calendar_dayslist-day">5</li>
+                        <li class="calendar_dayslist-day">6</li>
+                        <li class="calendar_dayslist-day">7</li>
+                        <li class="calendar_dayslist-day">8</li>
+                        <li class="calendar_dayslist-day">9</li>
+                        <li class="calendar_dayslist-day">10</li>
+                        <li class="calendar_dayslist-day">11</li>
+                        <li class="calendar_dayslist-day">12</li>
+                        <li class="calendar_dayslist-day">13</li>
+                        <li class="calendar_dayslist-day">14</li>
+                        <li class="calendar_dayslist-day">15</li>
+                        <li class="calendar_dayslist-day">16</li>
+                        <li class="calendar_dayslist-day">17</li>
+                        <li class="calendar_dayslist-day">18</li>
+                        <li class="calendar_dayslist-day">19</li>
+                        <li class="calendar_dayslist-day">20</li>
+                        <li class="calendar_dayslist-day">21</li>
+                        <li class="calendar_dayslist-day">22</li>
+                        <li class="calendar_dayslist-day">23</li>
+                        <li class="calendar_dayslist-day">24</li>
+                        <li class="calendar_dayslist-day">25</li>
+                        <li class="calendar_dayslist-day">26</li>
+                        <li class="calendar_dayslist-day">27</li>
+                        <li class="calendar_dayslist-day">28</li>
+                        <li class="calendar_dayslist-day">29</li>
+                        <li class="calendar_dayslist-day">30</li>
+                        <li class="calendar_dayslist-day">31</li>
+                    </ul>
+                </div>
+                <div class="app_performance_headingpfm"></div>
+                <div class="app_performance_mypfm"></div>
 
             </div>
         </div>
