--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+    <!-- Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+
     <!--  -->
 </head>
 <body style="background-color: var(--main_Color);">
@@ -33,23 +38,23 @@
 
                 </div>
                 <div class="app_Sidebar_Section d-flex flex-column  ">
-                    <div class="section-item flex-fill">
+                    <div class="section-item active-section">
                         <div class="section-item-icon"> <span class="material-symbols-outlined">dashboard</span> </div>
-                        <div class="section-title"> Dashboard </div>
+                        <div class="section-title "> Dashboard </div>
                     </div>
-                    <div class="section-item flex-fill">
+                    <div class="section-item unactive-section">
                         <div class="section-item-icon"> <span class="material-symbols-outlined">lightbulb</span> </div>
                         <div class="section-title"> Insights </div>
                     </div>
-                    <div class="section-item flex-fill">
+                    <div class="section-item unactive-section">
                         <div class="section-item-icon"> <span class="material-symbols-outlined">report</span> </div>
                         <div class="section-title"> Reports </div>
                     </div>
-                    <div class="section-item flex-fill">
+                    <div class="section-item unactive-section">
                         <div class="section-item-icon"> <span class="material-symbols-outlined">add_comment</span> </div>
                         <div class="section-title"> Comments </div>
                     </div>
-                    <div class="section-item flex-fill">
+                    <div class="section-item unactive-section">
                         <div class="section-item-icon"> <span class="material-symbols-outlined">outgoing_mail</span> </div>
                         <div class="section-title"> Inbox </div>
                     </div>
@@ -78,13 +83,13 @@
                     </span>
                 </div>
                 <!-- Info -->
-                <div class="content_info d-flex "> 
+                <div class="content_info d-flex  "> 
                     <div class="info_title d-flex flex-column ">
-                        <div class="info_title_text">
+                        <div class="info_title_text ">
                             <h1 class="">Organize & Manage your</h1>
                             <h1 class="">tasks with <strong>Listful</strong></h1>
                         </div>
-                        <div class="info_title_addtaskbtn">
+                        <div class="info_title_addtaskbtn ">
                             <button class=" addtaskbtn-element  ">Add task</button>
                         </div>
                     </div>
@@ -94,19 +99,19 @@
                             <time class="curtime_daymonye-item curtime-month">April</time>
                             <time class="curtime_daymonye-item curtime-year">2023</time>
                         </div>
-                        <div class="info_curtime-item curtime_weekday"><strong>Monday</strong></div>
+                        <div class="info_curtime-item curtime_weekday "><strong>Monday</strong></div>
                     </div>
                 </div>
                 <!-- Heading tasklist -->
                 <div class="content_headingtasklist">
-                    <h1 class="d-inline "><strong>My task</strong></h1>
+                    <h1 class="d-inline  "><strong>My task</strong></h1>
                     <a href="" class="viewall d-inline float-end">viewall</a>
                 </div>
                 <!-- Tasklist -->
                 <div class="content_tasklist ">
                     <!-- Day -->
-                    <div class="content_tasklist_weekday">
-                        <div class="content_tasklist_weekday_item hr-block text-center">
+                    <div class="content_tasklist_weekday ">
+                        <div class="content_tasklist_weekday_item hr-block text-center ">
                             <div class="weekday_item weekday_item-mon">Mon</div>
                             <div class="weekday_item dayof-mon">5</div>
                         </div>
@@ -164,24 +169,24 @@
             <div class="col-lg-4 p-0 app_performance d-flex flex-column pe-5 pb-3">
                 <div class="app_performance_profile d-flex flex-column ">
                     <img src="./img/avatar.jpg" alt="" class="app_performance_profile_avatar mx-auto ">
-                    <p class="app_performance_profile_status m-0 text-center">Hi Ngọc Minh</p>
+                    <p class="app_performance_profile_status m-0 text-center ">Hi Ngọc Minh</p>
                 </div>
-                <div class="app_performance_calendar">
-                    <div class="app_performance_calendar_navtime d-flex ">
+                <div class="app_performance_calendar d-flex flex-column">
+                    <div class="app_performance_calendar_navtime d-flex flex-fill ">
                         <div class="calendar_navtime_">arrow left</div>
                         <div class="calendar_navtime_">Current time</div>
                         <div class="calendar_navtime_">arrow right</div>
                     </div>
-                    <ul class="calendar_daylist p-0 m-0 px-5">
-                        <li class="calendar_dayslist-day">1</li>
-                        <li class="calendar_dayslist-day">2</li>
-                        <li class="calendar_dayslist-day">3</li>
-                        <li class="calendar_dayslist-day">4</li>
-                        <li class="calendar_dayslist-day">5</li>
-                        <li class="calendar_dayslist-day">6</li>
-                        <li class="calendar_dayslist-day">7</li>
-                        <li class="calendar_dayslist-day">8</li>
-                        <li class="calendar_dayslist-day">9</li>
+                    <ul class="calendar_daylist p-0 m-0 px-5 ">
+                        <li class="calendar_dayslist-day">01</li>
+                        <li class="calendar_dayslist-day">02</li>
+                        <li class="calendar_dayslist-day">03</li>
+                        <li class="calendar_dayslist-day">04</li>
+                        <li class="calendar_dayslist-day">05</li>
+                        <li class="calendar_dayslist-day">06</li>
+                        <li class="calendar_dayslist-day">07</li>
+                        <li class="calendar_dayslist-day">08</li>
+                        <li class="calendar_dayslist-day">09</li>
                         <li class="calendar_dayslist-day">10</li>
                         <li class="calendar_dayslist-day">11</li>
                         <li class="calendar_dayslist-day">12</li>
@@ -206,8 +211,21 @@
                         <li class="calendar_dayslist-day">31</li>
                     </ul>
                 </div>
-                <div class="app_performance_headingpfm"></div>
-                <div class="app_performance_mypfm"></div>
+                <div class="app_performance_headingpfm "><strong>My Performance</strong></div>
+                <div class="app_performance_mypfm">
+                    <div class="app_performance_mypfm_option ">
+                        <div class="app_performance_mypfm_option_month">Month</div>
+                        <div class="app_performance_mypfm_option_week">Week</div>
+                        <div class="app_performance_mypfm_option_day">Day</div>
+                    </div>
+                    <div class="app_performance_mypfm_info ">
+                        April 2023 (ToTal tasks 10)
+                    </div>
+                    <div class="app_performance_mypfm_details ">
+                        <div class="app_performance_mypfm_details-complete">7 Complete</div>
+                        <div class="app_performance_mypfm_details-inprogress">3 in progress</div>
+                    </div>
+                </div>
 
             </div>
         </div>
