--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     </div>
                     
                 </div>
-                <div class="app_Sidebar_logout section-item " >
+                <div class="app_Sidebar_logout " >
                     <span class="material-symbols-outlined section-item-icon">logout</span>
                     <a class="section-title" href="">Logout</a>
                 </div>
@@ -231,4 +231,5 @@
         </div>
     </div>
 </body>
+<script src="./main.js"></script>
 </html>
