--- a/index.html
+++ b/index.html
@@ -38,23 +38,23 @@
 
                 </div>
                 <div class="app_Sidebar_Section d-flex flex-column  ">
-                    <div class="section-item active-section">
+                    <div id="section-item-1" class="section-item active-section">
                         <div class="section-item-icon"> <span class="material-symbols-outlined">dashboard</span> </div>
                         <div class="section-title "> Dashboard </div>
                     </div>
-                    <div class="section-item unactive-section">
+                    <div id="section-item-2" class="section-item unactive-section">
                         <div class="section-item-icon"> <span class="material-symbols-outlined">lightbulb</span> </div>
                         <div class="section-title"> Insights </div>
                     </div>
-                    <div class="section-item unactive-section">
+                    <div id="section-item-3" class="section-item unactive-section">
                         <div class="section-item-icon"> <span class="material-symbols-outlined">report</span> </div>
                         <div class="section-title"> Reports </div>
                     </div>
-                    <div class="section-item unactive-section">
+                    <div id="section-item-4" class="section-item unactive-section">
                         <div class="section-item-icon"> <span class="material-symbols-outlined">add_comment</span> </div>
                         <div class="section-title"> Comments </div>
                     </div>
-                    <div class="section-item unactive-section">
+                    <div id="section-item-5" class="section-item unactive-section">
                         <div class="section-item-icon"> <span class="material-symbols-outlined">outgoing_mail</span> </div>
                         <div class="section-title"> Inbox </div>
                     </div>
@@ -62,7 +62,7 @@
                 </div>
                 <div class="app_Sidebar_logout " >
                     <span class="material-symbols-outlined section-item-icon">logout</span>
-                    <a class="section-title" href="">Logout</a>
+                    <label style="transform: translateY(-5px);" for="section-item-icon">Log out</label>
                 </div>
                 
             </div>
@@ -162,6 +162,9 @@
                                 <div class="tasklist_schedule-item-description">Meeting with the team</div>
                             </li>
                         </ul>
+
+
+            
                     </div>
                 </div>
             </div>
