--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Icon -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
+    
     <!-- Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -86,8 +86,11 @@
                 <div class="content_info d-flex  "> 
                     <div class="info_title d-flex flex-column ">
                         <div class="info_title_text ">
-                            <h1 class="">Organize & Manage your</h1>
-                            <h1 class="">tasks with <strong>Listful</strong></h1>
+                            <h1 style="font-size: large;" class="my-2">Organize & Manage your</h1>
+                            <h1 style="font-size: large;" class="my-0">tasks with 
+                                <strong style="font-size: larger; background:var(--gradient_Color);color: transparent;
+                                background-clip: text;">Listful</strong>
+                            </h1>
                         </div>
                         <div class="info_title_addtaskbtn ">
                             <button class=" addtaskbtn-element  ">Add task</button>
@@ -99,49 +102,53 @@
                             <time class="curtime_daymonye-item curtime-month">April</time>
                             <time class="curtime_daymonye-item curtime-year">2023</time>
                         </div>
-                        <div class="info_curtime-item curtime_weekday "><strong>Monday</strong></div>
+                        <div class="info_curtime-item curtime-weekday "><strong>Monday</strong></div>
                     </div>
                 </div>
                 <!-- Heading tasklist -->
                 <div class="content_headingtasklist">
-                    <h1 class="d-inline  "><strong>My task</strong></h1>
+                    <h1 class="d-inline " style="font-size: large;"><strong>My task</strong></h1>
                     <a href="" class="viewall d-inline float-end">viewall</a>
                 </div>
                 <!-- Tasklist -->
                 <div class="content_tasklist ">
                     <!-- Day -->
                     <div class="content_tasklist_weekday ">
-                        <div class="content_tasklist_weekday_item hr-block text-center ">
-                            <div class="weekday_item weekday_item-mon">Mon</div>
+                        <div class="content_tasklist_weekday_item weekday_mon text-center  ">
+                            <div class="weekday_item weekday_item-mon ">Mon</div>
                             <div class="weekday_item dayof-mon">5</div>
                         </div>
-                        <div class="content_tasklist_weekday_item text-center hr-block">
+                        <div class="content_tasklist_weekday_item weekday_tue text-center ">
                             <div class="weekday_item weekday_item-tue">Tue</div>
-                            <div class="weekday_item dayof-tue">6</div>
+                            <div class="weekday_item dayof-tue"></div>
                         </div>
-                        <div class="content_tasklist_weekday_item text-center hr-block">
+                        <div class="content_tasklist_weekday_item weekday_wed text-center ">
                             <div class="weekday_item weekday_item-wed">Wed</div>
-                            <div class="weekday_item dayof-wed">7</div>
+                            <div class="weekday_item dayof-wed"></div>
                         </div>
-                        <div class="content_tasklist_weekday_item text-center hr-block">
+                        <div class="content_tasklist_weekday_item weekday_thu text-center ">
                             <div class="weekday_item weekday_item-thu">Thu</div>
-                            <div class="weekday_item dayof-thu">8</div>
+                            <div class="weekday_item dayof-thu"></div>
                         </div>
-                        <div class="content_tasklist_weekday_item text-center hr-block">
+                        <div class="content_tasklist_weekday_item weekday_fri text-center ">
                             <div class="weekday_item weekday_item-fri">Fri</div>
-                            <div class="weekday_item dayof-fri">9</div>
+                            <div class="weekday_item dayof-fri"></div>
                         </div>
-                        <div class="content_tasklist_weekday_item text-center hr-block">
+                        <div class="content_tasklist_weekday_item weekday_sat text-center ">
                             <div class="weekday_item weekday_item-sat">Sat</div>
-                            <div class="weekday_item dayof-sat">10</div>
+                            <div class="weekday_item dayof-sat"></div>
                         </div>
-                        <div class="content_tasklist_weekday_item text-center ">
+                        <div class="content_tasklist_weekday_item weekday_sun text-center ">
                             <div class="weekday_item weekday_item-sun">Sun</div>
-                            <div class="weekday_item dayof-sun">11</div>
+                            <div class="weekday_item dayof-sun"></div>
                         </div>
+                        <div class="bg-animation"></div>
                     </div>
                     <!-- Arrow -->
-                    <div class="content_move-arrow">Mui ten</div>
+                    <div class="content_tasklist_arrow">
+                        <i class="fa-solid fa-circle-chevron-left "></i>
+                        <i class="fa-solid fa-circle-chevron-right"></i>
+                    </div>
                     <!-- Schedule -->
                     <div class="content_tasklist_schedule">
                         <ul class="tasklist_schedule-block h-100 d-flex flex-column p-0 m-0">
@@ -175,46 +182,60 @@
                     <p class="app_performance_profile_status m-0 text-center ">Hi Ngọc Minh</p>
                 </div>
                 <div class="app_performance_calendar d-flex flex-column">
-                    <div class="app_performance_calendar_navtime d-flex flex-fill ">
-                        <div class="calendar_navtime_">arrow left</div>
-                        <div class="calendar_navtime_">Current time</div>
-                        <div class="calendar_navtime_">arrow right</div>
+                    <div class="app_performance_calendar_navtime d-flex  ">
+                        <i class="fa-solid fa-circle-chevron-left "></i>
+                        <div class="calendar_navtime"></div>
+                        <i class="fa-solid fa-circle-chevron-right"></i>
                     </div>
-                    <ul class="calendar_daylist p-0 m-0 px-5 ">
-                        <li class="calendar_dayslist-day">01</li>
-                        <li class="calendar_dayslist-day">02</li>
-                        <li class="calendar_dayslist-day">03</li>
-                        <li class="calendar_dayslist-day">04</li>
-                        <li class="calendar_dayslist-day">05</li>
-                        <li class="calendar_dayslist-day">06</li>
-                        <li class="calendar_dayslist-day">07</li>
-                        <li class="calendar_dayslist-day">08</li>
-                        <li class="calendar_dayslist-day">09</li>
-                        <li class="calendar_dayslist-day">10</li>
-                        <li class="calendar_dayslist-day">11</li>
-                        <li class="calendar_dayslist-day">12</li>
-                        <li class="calendar_dayslist-day">13</li>
-                        <li class="calendar_dayslist-day">14</li>
-                        <li class="calendar_dayslist-day">15</li>
-                        <li class="calendar_dayslist-day">16</li>
-                        <li class="calendar_dayslist-day">17</li>
-                        <li class="calendar_dayslist-day">18</li>
-                        <li class="calendar_dayslist-day">19</li>
-                        <li class="calendar_dayslist-day">20</li>
-                        <li class="calendar_dayslist-day">21</li>
-                        <li class="calendar_dayslist-day">22</li>
-                        <li class="calendar_dayslist-day">23</li>
-                        <li class="calendar_dayslist-day">24</li>
-                        <li class="calendar_dayslist-day">25</li>
-                        <li class="calendar_dayslist-day">26</li>
-                        <li class="calendar_dayslist-day">27</li>
-                        <li class="calendar_dayslist-day">28</li>
-                        <li class="calendar_dayslist-day">29</li>
-                        <li class="calendar_dayslist-day">30</li>
-                        <li class="calendar_dayslist-day">31</li>
-                    </ul>
+                    <table class="app_performance_calendar_table px-2" style="width: 100%;text-align: center;">
+                        <tr class="app_performance_calendar_table_row">
+                            <td class="app_performance_calendar_table_col">29</td>
+                            <td class="app_performance_calendar_table_col">30</td>
+                            <td class="app_performance_calendar_table_col">31</td>
+                            <td class="app_performance_calendar_table_col">01</td>
+                            <td class="app_performance_calendar_table_col">02</td>
+                            <td class="app_performance_calendar_table_col">03</td>
+                            <td class="app_performance_calendar_table_col">04</td>
+                        </tr>
+                        <tr class="app_performance_calendar_table_row">
+                            <td class="app_performance_calendar_table_col">05</td>
+                            <td class="app_performance_calendar_table_col">06</td>
+                            <td class="app_performance_calendar_table_col">07</td>
+                            <td class="app_performance_calendar_table_col">08</td>
+                            <td class="app_performance_calendar_table_col">09</td>
+                            <td class="app_performance_calendar_table_col">10</td>
+                            <td class="app_performance_calendar_table_col">11</td>
+                        </tr>
+                        <tr class="app_performance_calendar_table_row">
+                            <td class="app_performance_calendar_table_col">12</td>
+                            <td class="app_performance_calendar_table_col">13</td>
+                            <td class="app_performance_calendar_table_col">14</td>
+                            <td class="app_performance_calendar_table_col">15</td>
+                            <td class="app_performance_calendar_table_col">16</td>
+                            <td class="app_performance_calendar_table_col">17</td>
+                            <td class="app_performance_calendar_table_col">18</td>
+                        </tr>
+                        <tr class="app_performance_calendar_table_row">
+                            <td class="app_performance_calendar_table_col">19</td>
+                            <td class="app_performance_calendar_table_col">20</td>
+                            <td class="app_performance_calendar_table_col">21</td>
+                            <td class="app_performance_calendar_table_col">22</td>
+                            <td class="app_performance_calendar_table_col">23</td>
+                            <td class="app_performance_calendar_table_col">24</td>
+                            <td class="app_performance_calendar_table_col">25</td>
+                        </tr>
+                        <tr class="app_performance_calendar_table_row">
+                            <td class="app_performance_calendar_table_col">26</td>
+                            <td class="app_performance_calendar_table_col">27</td>
+                            <td class="app_performance_calendar_table_col">28</td>
+                            <td class="app_performance_calendar_table_col">29</td>
+                            <td class="app_performance_calendar_table_col">30</td>
+                            <td class="app_performance_calendar_table_col">01</td>
+                            <td class="app_performance_calendar_table_col">21</td>
+                        </tr>
+                    </table>
                 </div>
-                <div class="app_performance_headingpfm "><strong>My Performance</strong></div>
+                <div class="app_performance_headingpfm "><strong >My Performance</strong></div>
                 <div class="app_performance_mypfm">
                     <div class="app_performance_mypfm_option ">
                         <div class="app_performance_mypfm_option_month">Month</div>
@@ -235,4 +256,5 @@
     </div>
 </body>
 <script src="./main.js"></script>
+<script src="./ui.js"></script>
 </html>
